--- a/GAME-ON/src/App.css
+++ b/GAME-ON/src/App.css
@@ -2,24 +2,50 @@ html, body,#app,#root{
   margin: 0;
   position: relative;
   height: 100%;
-}
-h1,h2,h3,h4,h5,h6{
-  margin:0;
+  color: rgb(240, 240, 240);
 }
 
+
 header{
-  background-color: rgb(144, 144, 144);
+  background-color: rgb(57, 57, 57);
+  height: 60px;
   position: fixed;
-  width: 100%;
   top: 0;
   left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+header h3{
+  white-space: nowrap;
+  margin-right: 5px;
+}
+
+header .header{
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+nav{
+  display: flex;
+  justify-content: space-evenly;
+  width: 70%;
+}
+
+nav a{
+  text-decoration: none;
+  color: white;
+}
+
 
 main{
   background-color: gray;
   height: 300vh;
   width: 100%;
-  margin-top: 100px;
+  margin-top: 60px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,6 +54,9 @@ main{
 section{
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #greeting{
