--- a/GAME-ON/src/coaches.css
+++ b/GAME-ON/src/coaches.css
@@ -4,7 +4,7 @@
   height: 50%;
 }
 .coach-card{
-  background-color: rgb(33, 33, 33);
+  background-color: #2C2C2C;
   border-radius: 5px;
   width: 25%;
   height: 100%;
