--- a/GAME-ON/src/App.css
+++ b/GAME-ON/src/App.css
@@ -36,7 +36,7 @@ nav{
   width: 70%;
 }
 
-nav a{
+header a{
   text-decoration: none;
   color: white;
 }
@@ -65,9 +65,9 @@ section h1{
   margin: 0;
 }
 
-.content h2{
-  font-size: 40px;
-  margin: 10px 0;
+section h2{
+  font-size: 50px;
+  margin: 10px;
 }
 
 #greeting{
@@ -95,6 +95,10 @@ object-fit: cover;
 .content a{
   align-self: flex-end;
   margin: 0 25px;
+}
+
+#why{
+  background-color: #202020;
 }
 
 #about{
