--- a/GAME-ON/src/App.css
+++ b/GAME-ON/src/App.css
@@ -57,17 +57,25 @@ section{
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 section h1{
   font-size: 75px;
-  margin: 0;
+  margin: 25px;
+}
+
+.content h2{
+  font-size: 50px;
+  margin: 10px;
+  text-align: center;
+
 }
 
 section h2{
-  font-size: 50px;
-  margin: 10px;
+  width: 50%;
+  margin: 30px;
+
 }
 
 #greeting{
@@ -99,6 +107,7 @@ object-fit: cover;
 
 #why{
   background-color: #202020;
+  background: url('../src/assets/bg2.png');
 }
 
 #about{
