--- a/GAME-ON/src/App.css
+++ b/GAME-ON/src/App.css
@@ -46,7 +46,6 @@ main{
   background-color: gray;
   height: fit-content;
   width: 100%;
-  margin-top: 60px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -69,12 +68,12 @@ section h1{
   font-size: 50px;
   margin: 10px;
   text-align: center;
-
 }
 
-section h2{
+section p{
   width: 50%;
   margin: 30px;
+  font-size: 30px;
 
 }
 
@@ -84,7 +83,6 @@ section h2{
 }
 video {
 object-fit: cover;
-
 }
 .content {
   position: absolute;
@@ -128,4 +126,21 @@ footer{
   display: flex;
   align-items: center;
   
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #000e22;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #102c3a;
+	border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #13184e;
 }
