add edit session

--- a/GAME-ON/src/App.css
+++ b/GAME-ON/src/App.css
@@ -151,7 +151,7 @@ footer{
 }
 
 .full-page{
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
