--- a/GAME-ON/src/App.css
+++ b/GAME-ON/src/App.css
@@ -9,6 +9,7 @@ html, body,#app,#root{
   height: 100%;
   color: rgb(240, 240, 240);
   background-color: rgb(48, 48, 48);
+  scroll-behavior: smooth;
 
 }
 
@@ -69,7 +70,7 @@ section{
 }
 
 section h1{
-  font-size: 75px;
+  font-size: 65px;
   margin: 25px;
 }
 
@@ -167,20 +168,24 @@ footer{
 }
 
 .full-page{
-  margin-top: 25px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  font-family: 'Teko', sans-serif;
+
 }
 
 .full-page form{
   height: 100vh;
+  margin-top: 25px;
   padding: 25px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  font-family: 'Teko', sans-serif;
+
 }
 
 form button{
@@ -198,6 +203,8 @@ form button{
   padding: 20px;
   justify-content: space-evenly;
   font-size: 30px;
+  font-family: 'Teko', sans-serif;
+
 }
 
 .Schedule {
@@ -220,12 +227,48 @@ td, th {
   flex-direction: column;
   align-items: center;
 justify-content: left;
+font-family: 'Teko', sans-serif;
+
 }
 
 .userInfo h2 {
   align-self: flex-start;
   padding-left: 20px;
+  font-family: 'Teko', sans-serif;
+
 }
 
+.signinh1 {
+  font-size: 70px;
+  font-family: 'Teko', sans-serif;
+  margin-top: 10px;
+  position: absolute;
+  top: 100px;
+  left: 60px;
+}
 
+form {
+  max-width: 300px;
+  text-align: center;
+  padding: 20px;
 
+}
+
+.signinlabel {
+font-size: 30px;
+}
+
+.signupform {
+  width: 60%;
+  text-align: center;
+  padding: 20px;
+}
+
+.signuph1 {
+  font-size: 70px;
+  font-family: 'Teko', sans-serif;
+  margin-top: 10px;
+  position: absolute;
+  top: 100px;
+  left: 60px;
+}
