--- a/GAME-ON/src/coach.css
+++ b/GAME-ON/src/coach.css
@@ -1,12 +1,13 @@
 .coaches-container{
   display: flex;
-  justify-content: space-around;
-  height: 50%;
+  justify-content: center;
+  width: 100%;
 }
-.coach-card{
+.coach-card {
   background-color: #2C2C2C;
   border-radius: 5px;
-  width: 25%;
+  margin: 50px;
+  width: 50%;
   height: 100%;
   display: flex;
   flex-direction: column;
