--- a/GAME-ON/src/App.css
+++ b/GAME-ON/src/App.css
@@ -26,6 +26,12 @@ header{
   justify-content: space-between;
   align-items: center;
 }
+.header h1:hover {
+  
+  color: rgb(11, 216, 11);
+  text-shadow: 2px 2px 5px ;
+
+}
 
 header h3{
   white-space: nowrap;
@@ -39,6 +45,8 @@ header .header{
   font-family: 'Teko', sans-serif;
   padding: 30px;
 }
+
+
 
 nav{
   display: flex;
@@ -99,6 +107,8 @@ section p{
 
 #Book-session{
   overflow: hidden;
+  font-family: 'Teko', sans-serif;
+
 
 }
 video {
@@ -117,6 +127,15 @@ video {
   background-image: linear-gradient(to bottom, rgba(0,0,0,0.75), #1A1A1A);
 
 }
+.content2 {
+  padding: 20px;
+  padding-top: 50px;
+  height: 100%;
+  align-items: center;
+  color: white;  
+  background-image: linear-gradient(to top, rgba(0,0,0,0.15), #1A1A1A);
+
+}
 
 .content a{
   align-self: flex-end;
@@ -128,10 +147,16 @@ video {
 #why{
   background-color: #202020;
   background: url('../src/assets/bg2.png');
+  font-family: 'Teko', sans-serif;
+
 }
 
 #about{
-  background-color: #2C2C2C;
+  background-image: url('../src/assets/Firefly gaming coaching platform 77057.png');
+  background-size:cover;
+  font-family: 'Teko', sans-serif;
+
+
 }
 
 #our-coaches{
@@ -147,6 +172,8 @@ footer{
   height: 60px;
   display: flex;
   align-items: center;
+  font-family: 'Teko', sans-serif;
+
   
 }
 
@@ -208,17 +235,33 @@ form button{
 }
 
 .Schedule {
-  /* padding: 20px; */
-  grid: 20px;
+  width: 80%;
+  margin: 20px ;
+  border-collapse: collapse;
+  font-family: 'Teko', sans-serif;
+  font-size: 30px;
+  
 }
 
-td, th {
-  border: solid black;
+
+
+tr {
+border: 5px solid black;  
+
+}
+td {
+  padding: 10px;
+  text-align: center;
+  border: 5px solid black;
   
 }
 
 .details {
   padding-top: 10px;
+  
+}
+.tableformat {
+  color: rgb(11, 216, 11)
 }
 
 .userInfo {
@@ -226,8 +269,8 @@ td, th {
   display: flex;
   flex-direction: column;
   align-items: center;
-justify-content: left;
-font-family: 'Teko', sans-serif;
+  justify-content: left;
+  font-family: 'Teko', sans-serif;
 
 }
 
@@ -245,23 +288,30 @@ font-family: 'Teko', sans-serif;
   position: absolute;
   top: 100px;
   left: 60px;
+  font-family: 'Teko', sans-serif;
+
 }
 
-form {
+.signupform {
   max-width: 300px;
   text-align: center;
   padding: 20px;
+  font-family: 'Teko', sans-serif;
 
 }
 
 .signinlabel {
-font-size: 30px;
+font-size: 40px;
+font-family: 'Teko', sans-serif;
+
 }
 
 .signupform {
   width: 60%;
   text-align: center;
   padding: 20px;
+  font-family: 'Teko', sans-serif;
+
 }
 
 .signuph1 {
@@ -271,4 +321,14 @@ font-size: 30px;
   position: absolute;
   top: 100px;
   left: 60px;
+  font-family: 'Teko', sans-serif;
+  
+}
+
+
+#profilep {
+  background-size:cover;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.15), #1A1A1A), url('../src/assets/the-dream-gaming-room-mgghnz5kfbvzcoj5.jpeg') ;
+  
+
 }
