--- a/GAME-ON/src/App.css
+++ b/GAME-ON/src/App.css
@@ -115,6 +115,10 @@ section p{
 }
 video {
   width: 100%;
+  height: 100%;
+  width: 177.77777778vh; /* 100 * 16 / 9 */
+  min-width: 100%;
+  min-height: 56.25vw; /* 100 * 9 / 16 */
 }
 .content {
   position: absolute;
